# nucleus-media

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
demo/: CMakeLists.txt
demo/src/Nucleus/Media/: Main.c
documentation/: Events.md  Index.md  Nucleus_ApplicationEvent.md  Nucleus_DynamicLibrary_getSymbol.md  Nucleus_Event.md  Nucleus_KeyboardKeyEvent.md  Nucleus_MousePointerEvent_create.md  building-under-windows-10-cygwin-gcc.md
plugins/: CMakeLists.txt
plugins/Direct3D/: CMakeLists.txt
plugins/Direct3D/src/Nucleus.Media.Plugin.Direct3D/: DLL.c  Plugin.c  Plugin.h  VideoSystem.c  VideoSystem.h  VideoSystemFactory.c  VideoSystemFactory.h  VideoSystemWindow.c  VideoSystemWindow.h  getVideoSystemConfigurations.c  getVideoSystemConfigurations.h
plugins/Direct3D/src/Nucleus/Media/Plugin/Direct3D/: Plugin.c  Plugin.h  VideoSystem.c  VideoSystemFactory.c  VideoSystemFactory.h
plugins/Metal/: CMakeLists.txt
plugins/Metal/src/Nucleus.Media.Plugin.Metal/: DLL.c  Plugin.c  Plugin.h  VideoSystem.c  VideoSystem.h  VideoSystemFactory.c  VideoSystemFactory.h  VideoSystemWindow.c  VideoSystemWindow.h
plugins/OpenAL/: CMakeLists.txt
plugins/OpenAL/src/Nucleus.Media.Plugin.OpenAL/: AudioSystem.c  AudioSystem.h  AudioSystemFactory.c  AudioSystemFactory.h  DLL.c  Plugin.c  Plugin.h  getAudioSystemConfigurations.c  getAudioSystemConfigurations.h
plugins/OpenGL/: CMakeLists.txt
plugins/OpenGL/dependencies/glew/: CMakeLists.txt
plugins/OpenGL/plugin/: CMakeLists.txt
plugins/OpenGL/plugin/src/Nucleus.Media.Plugin.OpenGL/: DLL.c  Plugin.c  Plugin.h  VideoSystem.c  VideoSystem.h  VideoSystemFactory.c  VideoSystemFactory.h  VideoSystemWindow.c  VideoSystemWindow.h  isExtensionSupported.c  isExtensionSupported.h
plugins/OpenGL/plugin/src/Nucleus.Media.Plugin.OpenGL/GLX/: GLX_ARB_create_context.c  GLX_ARB_create_context.h  VideoSystem.c  VideoSystem.h  VideoSystemWindow.c  VideoSystemWindow.h  getVideoSystemConfigurations.c  getVideoSystemConfigurations.h  glxe.c  glxe.h
plugins/OpenGL/plugin/src/Nucleus.Media.Plugin.OpenGL/WGL/: VideoSystem.c  VideoSystem.h  VideoSystemWindow.c  VideoSystemWindow.h  WGL_ARB_create_context.c  WGL_ARB_create_context.h  WGL_ARB_pixel_format.c  WGL_ARB_pixel_format.h  getVideoSystemConfigurations.c  getVideoSystemConfigurations.h
plugins/OpenGL/plugin/src/Nucleus/Media/Plugin/OpenGL/: Plugin.c  VideoSystem.c  VideoSystem.h  VideoSystemFactory.c  VideoSystemFactory.h
plugins/XAudio2/: CMakeLists.txt
plugins/XAudio2/plugin/: CMakeLists.txt
plugins/XAudio2/plugin/src/Nucleus.Media.Plugin.XAudio2/: AudioSystem.c  AudioSystemFactory.c  AudioSystemFactory.h  Plugin.c  XAudio2Utils.cpp  getAudioSystemConfigurations.c  getAudioSystemConfigurations.h
plugins/XAudio2/src/Nucleus.Media.Plugin.XAudio2/: AudioSystem.c  AudioSystem.h  AudioSystemFactory.c  DLL.c  Plugin.c  Plugin.h
plugins/XAudio2/wrapper/: CMakeLists.txt
plugins/XAudio2/wrapper/src/Nucleus.Media.XAudio2Wrapper/: XAudio2Wrapper.cpp  XAudio2Wrapper.h
test/: CMakeLists.txt
test/DynamicLibraryManager/: CMakeLists.txt
test/DynamicLibraryManager/src/Nucleus.Media.Test.DynamicLibraryManager/: Main.c
test/Event/: CMakeLists.txt
test/Event/src/Nucleus.Media.Test.Event/: Main.c
test/MediaContext/: CMakeLists.txt
test/MediaContext/src/Nucleus.Media.Test.MediaContext/: Main.c
test/Plugin/: CMakeLists.txt
test/Plugin/src/Nucleus.Media.Test.Plugin/: Main.c
